force-app/main/default/objects/User_Audit__c/User_Audit__c.object-meta.xml
<CustomObject>
    <label>User Audit</label>
    <nameField>
        <label>User Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>