force-app/main/default/objects/User_Audit__c/fields/Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Status__c</fullName>
    <label>Activation Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>