force-app/main/default/objects/User_Audit__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>