force-app/main/default/objects/User_Audit__c/fields/Audited_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Audited_User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Audited User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>