force-app/main/default/objects/User_Audit__c/fields/User_License__c.field-meta.xml
<CustomField>
    <fullName>User_License__c</fullName>
    <label>User License</label>
    <length>50</length>
    <type>Text</type>
</CustomField>